(templates) imx6-wt: Update template
Add net drivers and commands; also add startscript

--- a/templates/arm/imx6-wt/mods.config
+++ b/templates/arm/imx6-wt/mods.config
@@ -10,11 +10,16 @@ configuration conf {
 
 	@Runlevel(0) include embox.kernel.critical
 
-	@Runlevel(0) include embox.driver.interrupt.cortex_a9_gic(cpu_base_addr=0x00A00100,distributor_base_addr=0x00A01000)
+	@Runlevel(0) include embox.driver.interrupt.cortex_a9_gic(cpu_base_addr=0x00A00100,distributor_base_addr=0x00A01000,log_level=4)
 	@Runlevel(0) include embox.kernel.stack(stack_size=4096)
 	@Runlevel(2) include embox.driver.serial.imx_uart(base_addr=0x21E8000)
 	@Runlevel(1) include embox.driver.diag(impl="embox__driver__serial__imx_uart")
-	@Runlevel(0) include embox.driver.clock.imx6_gpt
+	@Runlevel(0) include embox.driver.clock.imx6_gpt(freq=1024)
+
+	@Runlevel(2) include embox.driver.net.imx6_net(log_level=4)
+	@Runlevel(2) include embox.driver.net.loopback
+
+	@Runlevel(2) include embox.net.skbuff_data(ip_align=true)
 
 	include embox.compat.libc.stdio.print(support_floating=0)
 
@@ -42,7 +47,12 @@ configuration conf {
 	include embox.cmd.test
 	include embox.cmd.help
 	include embox.cmd.sys.date
+	include embox.cmd.sys.env
+	include embox.cmd.sys.export
 	include embox.cmd.sys.version
 	include embox.cmd.fs.cat
 	include embox.cmd.fs.ls
+	include embox.cmd.net.ifconfig
+	include embox.cmd.net.ping
+	include embox.cmd.net.route
 }
