drivers: Add ttyS0 for imx_uart

--- a/templates/arm/imx6/mods.config
+++ b/templates/arm/imx6/mods.config
@@ -26,6 +26,9 @@ configuration conf {
 	include embox.fs.syslib.file_system_none
 	include embox.fs.syslib.perm_stub
 	include embox.compat.posix.fs.all_dvfs
+	include embox.driver.char_dev_dvfs
+	include embox.driver.tty.serial_dvfs
+	include embox.driver.serial.uart_dev_dvfs
 
 	include embox.fs.driver.dvfs_driver
 	include embox.fs.driver.initfs_dvfs
